[gd_scene load_steps=15 format=2]

[ext_resource path="res://scene/main.gd" type="Script" id=1]
[ext_resource path="res://image/stop-sheet.png" type="Texture" id=2]
[ext_resource path="res://win.png" type="Texture" id=3]
[ext_resource path="res://scene/ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://image/green_eye_op_00-sheet.png" type="Texture" id=5]
[ext_resource path="res://321 STOP.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 858.106, 85.9404 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 165.555, 909.277 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 397.841 )

[sub_resource type="Animation" id=4]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/timer:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D/timer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer/eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 8, 9 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer/eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer/eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5 ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/ParallaxLayer/eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="scene" type="Node2D" parent="."]
modulate = Color( 0.152344, 0.152344, 0.152344, 1 )

[node name="player" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="timer" type="Sprite" parent="Camera2D"]
visible = false
position = Vector2( -87.209, 131.695 )
texture = ExtResource( 2 )
hframes = 9
frame = 2

[node name="win" type="Sprite" parent="Camera2D"]
visible = false
position = Vector2( -13.2843, -1.71835 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Camera2D"]
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Camera2D/Area2D"]
position = Vector2( -53.7543, 786.12 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D"]
position = Vector2( -1072.52, -37.1843 )
shape = SubResource( 2 )

[node name="wall" type="StaticBody2D" parent="Camera2D"]
position = Vector2( 644, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/wall"]
position = Vector2( -100.211, -1.67017 )
shape = SubResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="eye" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="1"]
position = Vector2( 66.3857, -174.007 )
texture = ExtResource( 5 )
hframes = 10
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "countDown"
anims/countDown = SubResource( 4 )

[node name="eyeAnim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/close = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/open = SubResource( 7 )
anims/shake = SubResource( 8 )
next/close = "idle"

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
max_distance = 1e+008
attenuation = 4.62559e-005
[connection signal="body_entered" from="Camera2D/Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="ParallaxBackground"]
